--- a/latihan2.ipynb
+++ b/latihan2.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
+      "name": "latihan2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNMb3FNPGfVpLJFOEUod4Uh",
+      "authorship_tag": "ABX9TyM0ncCpcGsrTu2b2eVoWjWp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DtHLgpKeJOAX"
+        "id": "DtHLgpKeJOAX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "91837ab0-cf86-45c3-ebd8-cbedef99f7c1"
       },
       "source": [
-        ""
+        "nama=\"wahyu\"\n",
+        "alamat=\"padang\"\n",
+        "dosen=\"true\"\n",
+        "print (\"nama =\", nama)\n",
+        "print (\"alamat=\",alamat)\n",
+        "if (dosen):\n",
+        "  print (\"status= Dosen\")\n",
+        "else:\n",
+        "  print (\"status=mahasiswa\")\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "nama = wahyu\n",
+            "alamat= padang\n",
+            "status= Dosen\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
