--- a/latihan2.ipynb
+++ b/latihan2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "latihan2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM0ncCpcGsrTu2b2eVoWjWp",
+      "authorship_tag": "ABX9TyPwThau7Vbbgtp/DMGymRSG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/bigdata-unand/Latihan-python/blob/main/latihan2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q2Hh-dfNW2cf"
+      },
+      "source": [
+        "Program menampilkan nama dan alamat dan memilih status dosen atau mahasiswa"
       ]
     },
     {
